--- a/about/index.html
+++ b/about/index.html
@@ -7,22 +7,22 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.DjroCB-m.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?5b79c5f4-40ba-41f6-8057-85a89b5b8b83">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/H5xpvU1X.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9Wb4jya.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BlSEGQ5P.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CRWgC9MD.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BGi6T4xX.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Ca6Iwvq3.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cs9_bkX6.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Ds_OyY7B.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/PCUF_uIS.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dl72-ADt.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/YDErMN0Z.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?61af3405-2f8d-4b65-97ea-42bdaa5ee434">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CwojaRIV.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CRLdOoi6.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/XGU6JJsT.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DcWMF5ul.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DSKVeP1Q.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_Az7w_Rm.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CkRkTpwb.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C4ZobxDN.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BukXjhcr.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BHsYfTNf.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/ai6LEmZt.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/H5xpvU1X.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?5b79c5f4-40ba-41f6-8057-85a89b5b8b83">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736586053572]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"5b79c5f4-40ba-41f6-8057-85a89b5b8b83",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/CwojaRIV.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?61af3405-2f8d-4b65-97ea-42bdaa5ee434">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736592826495]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"61af3405-2f8d-4b65-97ea-42bdaa5ee434",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
