--- a/about/index.html
+++ b/about/index.html
@@ -7,22 +7,22 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.DjroCB-m.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?61af3405-2f8d-4b65-97ea-42bdaa5ee434">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CwojaRIV.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CRLdOoi6.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/XGU6JJsT.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DcWMF5ul.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DSKVeP1Q.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_Az7w_Rm.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CkRkTpwb.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C4ZobxDN.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BukXjhcr.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BHsYfTNf.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/ai6LEmZt.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?6c18a85a-a246-435b-93f9-d804dc8b7ce8">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DkGPYCqW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bsq0YsPL.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DghVUwJ4.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CQgb58eM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/YIn7IeB0.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CoyGbi3v.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/aBjRtbmK.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BaS5NYzE.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/MX0jjMM-.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/NcVCIAx9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CTQdpATe.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CwojaRIV.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?61af3405-2f8d-4b65-97ea-42bdaa5ee434">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736592826495]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"61af3405-2f8d-4b65-97ea-42bdaa5ee434",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DkGPYCqW.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?6c18a85a-a246-435b-93f9-d804dc8b7ce8">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736670474663]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"6c18a85a-a246-435b-93f9-d804dc8b7ce8",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
