--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.jJ2CPY3W.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?61af3405-2f8d-4b65-97ea-42bdaa5ee434">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CwojaRIV.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C5Zw2V-i.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/XGU6JJsT.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CwO2Suaq.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DtxfRJWv.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DSKVeP1Q.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bu_qcgra.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_Az7w_Rm.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C4ZobxDN.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BukXjhcr.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BHsYfTNf.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/ai6LEmZt.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?6c18a85a-a246-435b-93f9-d804dc8b7ce8">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DkGPYCqW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DfZxPT7f.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DghVUwJ4.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CZ3m14k5.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/0KGeHN_A.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/YIn7IeB0.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CZbM4IZD.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CoyGbi3v.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BaS5NYzE.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/MX0jjMM-.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/NcVCIAx9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CTQdpATe.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CwojaRIV.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?61af3405-2f8d-4b65-97ea-42bdaa5ee434">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736592826499]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"61af3405-2f8d-4b65-97ea-42bdaa5ee434",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DkGPYCqW.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?6c18a85a-a246-435b-93f9-d804dc8b7ce8">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736670474667]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"6c18a85a-a246-435b-93f9-d804dc8b7ce8",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
