--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.jJ2CPY3W.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?6c18a85a-a246-435b-93f9-d804dc8b7ce8">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DkGPYCqW.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DfZxPT7f.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DghVUwJ4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CZ3m14k5.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/0KGeHN_A.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/YIn7IeB0.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CZbM4IZD.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CoyGbi3v.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BaS5NYzE.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/MX0jjMM-.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/NcVCIAx9.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CTQdpATe.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?faaa6bce-1a33-4816-8c23-82319eb6d88f">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BpWNhz74.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BFzGtwwj.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B_ZdeQ7e.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C_jLSMnB.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CdVlbDmQ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/xsFqA0FL.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DMXa3Yqi.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/jVSibM6d.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BPigkg0b.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DYQXcfV9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/bfot96_T.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/HmWxjZ1t.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DkGPYCqW.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?6c18a85a-a246-435b-93f9-d804dc8b7ce8">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736670474667]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"6c18a85a-a246-435b-93f9-d804dc8b7ce8",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BpWNhz74.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?faaa6bce-1a33-4816-8c23-82319eb6d88f">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736673429094]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"faaa6bce-1a33-4816-8c23-82319eb6d88f",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
