--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.jJ2CPY3W.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?2b11f444-9566-4e9b-9652-f35ce544fccc">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/MuGVkTS7.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_9J0JYwM.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CXYkFlm_.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B294kJKV.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CVwMvlOB.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DFFuluUy.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cz4TofiE.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dpl9lYGk.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BtF0N3M2.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BRlG9LH-.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/62XbExCt.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BSQUGhCr.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?4ff8a539-6531-43f5-8651-aae684a3887d">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B_6Wx6nk.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CrRWy0cG.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D9y3XQ2d.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B0mIZ3fG.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/USsumKKC.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DcZ5R93f.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Ds9ZXKoe.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ChgdPqci.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/mUXT-vhL.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DxZJdHo3.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BSdm8ffS.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/rlXrC3J7.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/MuGVkTS7.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?2b11f444-9566-4e9b-9652-f35ce544fccc">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736673633966]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"2b11f444-9566-4e9b-9652-f35ce544fccc",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/B_6Wx6nk.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?4ff8a539-6531-43f5-8651-aae684a3887d">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736674125641]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"4ff8a539-6531-43f5-8651-aae684a3887d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
