--- a/about/index.html
+++ b/about/index.html
@@ -7,22 +7,22 @@
 <style>.imgabout{margin:auto;width:100%}p{line-height:1}</style>
 <link rel="stylesheet" href="/_nuxt/Topbar.DjroCB-m.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?a9cd633d-7fb1-4fe8-9ae4-3898be73f3e9">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B_6Wx6nk.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CheC5v5R.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D9y3XQ2d.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BlNHd3ql.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DcZ5R93f.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ChgdPqci.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CXECaEz1.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/mUXT-vhL.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DxZJdHo3.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BSdm8ffS.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/rlXrC3J7.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/about/_payload.json?dcedae90-6ff5-4320-8fb6-c345fea3190a">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CS1X3oXA.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CD4HfsmZ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/d8-hfbpM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DpEAuqr-.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BlCAG2lc.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/bwZmyjlV.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DuLL_V6S.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/7yhPdfMq.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/_vNnIm79.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/6wrZSQXr.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dzq9qBHq.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/B_6Wx6nk.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?a9cd633d-7fb1-4fe8-9ae4-3898be73f3e9">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736674327787]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"a9cd633d-7fb1-4fe8-9ae4-3898be73f3e9",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/CS1X3oXA.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/about/_payload.json?dcedae90-6ff5-4320-8fb6-c345fea3190a">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/about",1736674670083]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"dcedae90-6ff5-4320-8fb6-c345fea3190a",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
