--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.jJ2CPY3W.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?dcedae90-6ff5-4320-8fb6-c345fea3190a">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CS1X3oXA.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/O5EFrxU-.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/d8-hfbpM.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BqyFP0a5.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DmapbX8d.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BlCAG2lc.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/GM11EIn9.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/bwZmyjlV.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/7yhPdfMq.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/_vNnIm79.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/6wrZSQXr.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dzq9qBHq.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?173682ad-289c-43e6-ab7e-5a49c4b434f9">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D7PaJqce.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CSBUN58s.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DDIMkkgt.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D4RcOU8f.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BTAJ5WIs.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DDhM9cQ0.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CaIM-Q_h.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BHxYvPYj.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DqTeYPCK.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CePrgn3e.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bs0cxFH0.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/5PxU3Fu6.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CS1X3oXA.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?dcedae90-6ff5-4320-8fb6-c345fea3190a">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736674670087]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"dcedae90-6ff5-4320-8fb6-c345fea3190a",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/D7PaJqce.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?173682ad-289c-43e6-ab7e-5a49c4b434f9">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736674905612]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"173682ad-289c-43e6-ab7e-5a49c4b434f9",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
